
	Files modified: framework.c, global.h, Makefile

2/23/2019 - Regi
	- Implemented function to change the seed of rand(), so that our results aren't skewed towards a single data set
	- changed minimum payload size to 0, since there are packets that just transfer the header with no payload.
		- minimum packet struct size is now 24 and max is 9024 (in terms of bytes)
	- set expected[], line 96 in framework.c, to the order of the first packet it recieved 
	- moved original algorithm.c (singe wire algorithm) to newly created algorithm folder and renamed it to singleWire.c
	- detached main algorithm thread
	- defined HEADER_SIZE 24, line 36 in global.h. Defines first 24 bytes in packet header
	- changed length variable of packet to correspond to payload size instead of header size
	- implemented some error handling in the framework
	- changed globally defined variable to be represented in bytes. There was an issue in regards to calculating the size of the structures and the size
		in terms of bits and bytes were not consistent. I chose bytes since that's what most functions will use when calculating size.
	- tried testing out memcpy() for the current algorithm, but there seems to be issues possibly because of thread premption or memory ordering

	Files modified: framework.c, global.h
	
2/24/2019 - Lito
	- changed this line $(CC) $(LDFLAGS) -c -o $@ $< $(CFLAGS)
	  $(CC) $(LDFLAGS) -std=c99 -c -o $@ $< $(CFLAGS)
	  So that the for loops don't have issues building on linux
	- changed asm to __asm__ because this is required for c99 as well.
	Files Modified: Makefile, global.h, testScript.sh

2/27/2019 - Alex
	-Removed duplicated code and optimized processing queues.
	-Added Processing test limit algorithm
	-Removed Unneccessary functions
	-Added new exit conditions for framework
	-Changed framework to run for 10 seconds after waiting 3 seconds for ramp up, then recording average number of packets passed

	File modified: global.h global.c framework.c algorithm.h
	
	