@@ -1,9 +1,14 @@
+// -Algorithm speed is measured by the main function.
+// -The algorithm allows the run function to go for 3 seconds, measures the count, run for 10 seconds, then measure the count.
+//  Packets per second is equal to (second count - first count) / 10.
 //REQUIRED:
 // -algorithm.c that defines a function void* run(void*)
+// -algorithm.c that defines a function char* getName()
 // -algorithm.h that defines the functions used in algorithm.c
 // -algorithm.c needs to import global.h in order to have access to queues
-// -alogrithm.c has access to clockspeed, which is an int that is a normalized value for the number of ticks in a second.
-//  Use for measuring algorithm speed.
+// -alogrithm.c has access to count[] which is an array to keep track of the count.
+//  count is an array to allow multiple threads to access any count variable
+// - You will need to set thread props for the run function, otherwise your algorithm will perform very poorly
 
 #include"global.h"
 #include"wrapper.h"
@@ -23,6 +28,9 @@ void* input_thread(void *args){
     int queueNum = inputArgs->queueNum;   
     queue_t * inputQueue = (queue_t *)inputArgs->queue;
 
+    //Set the thread to its own core
+    set_thread_props(inputArgs->coreNum);
+
     //Each input buffer has 5 flows associated with it that it generates
     int flowNum[FLOWS_PER_QUEUE] = {0};
     int currFlow, currLength;
@@ -34,11 +42,15 @@ void* input_thread(void *args){
     while(1){
         //Assign a random flow within a range: [n, n + 1, n + 2, n + 3, n + 4]. +1 is to avoid the 0 flow
         currFlow = (rand() % FLOWS_PER_QUEUE) + offset + 1;
-        currLength = (rand() % MAX_PAYLOAD_SIZE);
+
+        //Assign a random length to the packet. Length defines the entire packet struct, not just payload
+        //Minimum size computed below is MIN_PACKET_SIZE
+        //Maximum size computed below is MAX_PACKET_SIZE
+        currLength = (rand() % (MAX_PACKET_SIZE - MIN_PACKET_SIZE)) + MIN_PACKET_SIZE;
 		
 		if(currLength < 0 || currFlow <= 0){
-			fprintf(stderr, "ERROR: generating packet with currFlow: %d, currLength: %d", currFlow, currLength);
-			exit(1);
+			fprintf(stderr, "*ERROR: generating packet with currFlow: %d, currLength: %d", currFlow, currLength);
+			exit(0);
 		}
         //If the queue spot is filled then that means the input buffer is full so continuously check until it becomes open
         while((*inputQueue).data[index].flow != 0){
@@ -70,6 +82,9 @@ void* processing_thread(void *args){
     int numInputs = (int)input.queueCount;   
     queue_t *processQueue = (queue_t *)processArgs->queue;
 
+    //Set the thread to its own core
+    set_thread_props(processArgs->coreNum);
+
     //"Process" packets to confirm they are in the correct order before consuming more. 
     //Processing threads process until they get to a spot with no packets
     int expected[numInputs * FLOWS_PER_QUEUE + 1]; 
@@ -96,31 +111,33 @@ void* processing_thread(void *args){
 			expected[currFlow] = (*processQueue).data[index].order;
 		}
 		
-        //If a packet is grabbed out of order exit
+        //Packets order must be equal to the expected order.
+        //Implementing less than currflow causes race conditions with writing
+        //Any line that starts with a * is ignored by python script
         if(expected[currFlow] != (*processQueue).data[index].order){
             
             for(int i = 0; i < BUFFERSIZE; i++){
-                printf("Position: %d, Flow: %ld, Order: %ld\n", i, (*processQueue).data[i].flow, (*processQueue).data[i].order);
+                printf("*Position: %d, Flow: %ld, Order: %ld\n", i, (*processQueue).data[i].flow, (*processQueue).data[i].order);
             }
             
-            printf("Error Packet: Flow %lu | Order %lu\n", (*processQueue).data[index].flow, (*processQueue).data[index].order);
-            printf("Packet out of order in Output Queue %d. Expected %d | Got %lu\n", queueNum, expected[currFlow], (*processQueue).data[index].order);
+            printf("*Error Packet: Flow %lu | Order %lu\n", (*processQueue).data[index].flow, (*processQueue).data[index].order);
+            printf("*Packet out of order in Output Queue %d. Expected %d | Got %lu\n", queueNum, expected[currFlow], (*processQueue).data[index].order);
             exit(0);
         }
         //Else "process" the packet by filling in 0 and incrementing the next expected
         else{            
-            //Increment how many packets the queue has processed
+            //increment the number of packets passed
             (*processQueue).count++;
 
             //Set what the next expected packet for the flow should be
             expected[currFlow]++;
 
-            //Set the position to free
-            (*processQueue).data[index].flow = 0;
-
             //Move to the next spot in the outputQueue to process
             (*processQueue).toRead++;
             (*processQueue).toRead = (*processQueue).toRead % BUFFERSIZE;
+
+            //Set the position to free
+            (*processQueue).data[index].flow = 0;
         }
     }
 }
@@ -128,12 +145,14 @@ void* processing_thread(void *args){
 void main(int argc, char**argv){
     //Error checking for proper running
     if (argc < 3){
-        printf("Usage: Queues <# input queues>, <# output queues>\n");
+        printf("*Usage: Queues <# input queues>, <# output queues>\n");
         exit(0);
     }
 	
 	// set seed for rand()
 	srand(time(NULL));
+
+    char* algName = getName();
 
     //Grab the number of input and output queues to use
     input.queueCount = atoi(argv[1]);
@@ -147,6 +166,11 @@ void main(int argc, char**argv){
     //Initialize thread attributes
     pthread_attr_t attrs;
     pthread_attr_init(&attrs);
+
+    //Tell the system we are setting the schedule for the thread, instead of inheriting
+    if(pthread_attr_setinheritsched(&attrs, PTHREAD_EXPLICIT_SCHED)) {
+        perror("pthread_attr_setinheritsched");
+    }
 
     //initialize input queues
     for(int queueIndex = 0; queueIndex < input.queueCount; queueIndex++){
@@ -180,12 +204,15 @@ void main(int argc, char**argv){
     }
 
     int pthreadErr;
+    int core = 1;
     //create the input generation threads.
     //Each input queue has a thread associated with it
     for(int index = 0; index < input.queueCount; index++){
         //Initialize Thread Arguments with first queue and number of queues
         input.threadArgs[index].queue = &input.queues[index];
         input.threadArgs[index].queueNum = index;
+        input.threadArgs[index].coreNum = core;
+        core++;
 
         //Spawn input thread
         Pthread_create(&input.threadIDs[index], &attrs, input_thread, (void *)&input.threadArgs[index]);
@@ -200,6 +227,8 @@ void main(int argc, char**argv){
         //Initialize Thread Arguments with first queue and number of queues
         output.threadArgs[index].queue = &output.queues[index];
         output.threadArgs[index].queueNum = index;
+        output.threadArgs[index].coreNum = core;
+        core++;
 
         //Spawn the thread
         Pthread_create(&output.threadIDs[index], &attrs, processing_thread, (void *)&output.threadArgs[index]);
@@ -210,24 +239,20 @@ void main(int argc, char**argv){
 
 
     //Print out testing information to the user
-    printf("\nTesting with: \n%lu Input Queues \n%lu Output Queues\n\n", input.queueCount, output.queueCount);
+    //printf("\nTesting with: \n%lu Input Queues \n%lu Output Queues\n\n", input.queueCount, output.queueCount);
 
     //Allow buffers to fill
     usleep(20000);
 
-    //The algorithm portion that gets inserted into the code
-    //--Another option is to move the global variables/non input/output thread functions into a different header function <global.h>--
-    //--and put that header in both the framework and algorithm code--
-    //--Allows for better abstraction--
-
     //Run thread ID
-    pthread_t RunID;
+    pthread_t runID;
 
     //Spawn the thread that handles the algorithm portion.
     //We are allowed to spawn threads from threads, so there is no conflict here
-    Pthread_create(&RunID, &attrs, run, NULL);
+    Pthread_create(&runID, &attrs, run, NULL);
 
-    printf("Starting Algorithm\n\n");
+    //Print out that the algorithm has started
+    //printf("Starting Algorithm\n\n");
 
     //Wait 3 seconds for ramp up time and record the count the processing queues have processed
     usleep(3000000);
@@ -243,5 +268,7 @@ void main(int argc, char**argv){
     for(int i = 0; i < output.queueCount; i++){
         finalCount += output.queues[i].count;
     }
-    printf("Successfully processed %lu packets per second on average\n", (finalCount - rampUpCount) / 10);
+
+    //Output the data to a file
+    printf("%s, %lu, %lu, %lu\n", algName, input.queueCount, output.queueCount, (finalCount - rampUpCount) / 10);
 } 
