@@ -64,5 +64,17 @@ Files modified: framework.c, global.h, algorithm.c, algorithm.h
 	-Changed framework to run for 10 seconds after waiting 3 seconds for ramp up, then recording average number of packets passed
 
 	File modified: global.h global.c framework.c algorithm.h
+
+3/01/2019 - Alex
+	-Formatted output
+	-Added getName function to framework to get algName constant from algorithm.c file
+	-Put * in front of all print statements that shouldnt be processed
+	-Added set_thread_props function to assign thread to core
+	-Assigned processing and input generation threads to specific cores
+	-Changed algorithms to work on specific cores
+	-Added input generation metric test
+	-Fixed processing metric test
+
+	File modified: global.h global.c framework.c algorithm.h
 	
 	
